--- a/index.html
+++ b/index.html
@@ -157,10 +157,12 @@
     <div class="card"><div class="kicker">Parquest</div><h3>Transformer des industries par l’IA</h3><p>Playbooks d’exécution.</p></div>
     <div class="card"><div class="kicker">investir+</div><h3>Scaler une startup à impact</h3><p>Cas réels.</p></div>
     <div class="card"><div class="kicker">Caisse des écoles</div><h3>IA pour le service public</h3><p>Qualité et charge.</p></div>
-    <div class="card"><div class="kicker">PMI Board</div><h3>Innover en grand groupe</h3><p>Gouvernance et cadence.</p></div>
+    <div class="card"><div class="kicker">Project Management Institute</div><h3>Innover en grand groupe</h3><p>Gouvernance et cadence.</p></div>
     <div class="card"><div class="kicker">TotalEnergies</div><h3>Builder un “AWS de l’IT”</h3><p>Plateformes internes.</p></div>
     <div class="card"><div class="kicker">Bremens Avocats</div><h3>Avocat &amp; IA</h3><p>Productivité &amp; risque.</p></div>
     <div class="card"><div class="kicker">SBM Offshore</div><h3>Compétiteur AI-first</h3><p>Vision à 3 ans.</p></div>
+    <div class="card"><div class="kicker">Rakutene</div><h3>SalesOps IA</h3><p>Les marketplaces à l'heure de l'IA</p></div>
+
   </div>
 
   <!-- Clients -->
