--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="when">2023 – aujourd’hui</div>
       <div class="what">
         <img class="logo" src="https://cdn.prod.website-files.com/6798e14b489367f9260ee272/67a47aa92eed132d30642c80_opengraph.png" alt="Kayro.ai"> </li>
-        Avec <a href="https://thomas-solignac.com/" rel="noopener">Thomas Solignac</a>, j'ai lancé <a href="https://www.kayro.ai/" rel="noopener">kayro.ai</a>, une nouvelle entreprise de consulting IA. J'ai réuni une équipe de repeat founders tech et IA autour d'un objectif : transformer les industries traditionnelles en France. </li>
+        Avec <a href="https://thomas-solignac.com/" rel="noopener">Thomas Solignac</a>, j'ai lancé <a href="https://www.kayro.ai/" rel="noopener">kayro.ai</a>, une nouvelle entreprise de consulting IA. J'ai réuni une équipe de repeat founders tech et IA autour d'un objectif : transformer les industries traditionnelles en France. Pour elles, on conçoit et déloye des systèmes d'IA appliquée. Cela inclut de l'analyse stratégique, de la coneption produit, de la préparation et annotation de données in-house, de l'entrainement de modèles et du chainage de LLMs, la science de faire en sorte que ça fonctionne et du déploiement en production, avec intégration aux SI industriels. </li>
         <br> En même temps, je donne des conférences auprès de directions générales, comités d’investissement et équipes produit/data. </br>
         <br> Et je partage mes apprentissages en écrivant des articles et des posts sur <a href="https://www.linkedin.com/in/victor-galli/" rel="noopener">LinkedIn</a>. </br>
         <br> 68 projets IA en 2 ans (<a href="https://www.kayro.ai/references" rel="noopener">références</a>). </br>
