--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="header">
     <div>
       <h1>Victor Galli</h1>
-      <div class="lead">J’aime construire des systèmes IA pour réinventer des industries traditionnelles.</div>
+      <div class="lead">J’aime construire des systèmes IA pour réinventer les industries traditionnelles.</div>
       <div class="small">
         <a href="https://kayro.ai" rel="noopener">Kayro.ai</a> · 
         <a href="mailto:victor@kayro.ai">victor@kayro.ai</a> · 
