--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <li><span class="date">2025</span><a href="https://www.kayro.ai/blog/ce-quon-oublie-encore-dans-les-comites-dinvestissement-ia" rel="noopener">Ce qu’on oublie encore dans les comités d’investissement IA</a></li>
     <li><span class="date">2025</span><a href="https://www.kayro.ai/blog/80-des-agents-ia-sont-de-simples-automatisations" rel="noopener">80 % des agents IA sont de simples automatisations</a></li>
     <li><span class="date">2025</span><a href="https://www.kayro.ai/blog/non-la-bulle-ia-na-pas-eclate-mais-certaines-illusions-oui" rel="noopener">Non, la bulle IA n’a pas éclaté — certaines illusions, oui</a></li>
-    <li><span class="date">2025</span><a href="https://cdn.prod.website-files.com/6798ed9bba6f58e11f462391/67d8a723d7e1d97eb8b9116b_Knowledge%20Graph%20Offshore%20Zone.webp" rel="noopener">Knowledge Graph “offshore zone” (visuel)</a></li>
+    <li><span class="date">2025</span><a href="https://www.kayro.ai/blog/le-grand-retour-de-la-connaissance-explicite">Le grand retour de la connaissane explicite </a></li>
     <li><span class="date">2024</span><a href="https://www.kayro.ai/blog/large-language-models-lessentiel-pour-se-lancer" rel="noopener">LLM : l’essentiel pour se lancer</a></li>
     <li><span class="date">2024</span><a href="https://www.kayro.ai/blog/lancer-un-projet-de-deep-learning-ou-le-mariage-heureux-de-la-recherche-et-du-produit" rel="noopener">Lancer un projet de Deep Learning : le mariage heureux de la recherche et du produit</a></li>
     <li><span class="date">2024</span><a href="https://www.kayro.ai/blog/estimer-le-cout-dun-projet-ia-comment-eviter-les-pieges-et-choisir-un-prestataire-serieux" rel="noopener">Estimer le coût d’un projet IA : éviter les pièges et choisir un prestataire sérieux</a></li>
