--- a/index.html
+++ b/index.html
@@ -152,16 +152,17 @@
   <!-- Public talks -->
   <h2>public talks</h2>
   <div class="cards">
-    <div class="card"><div class="kicker">AI Camp</div><h3>Estimer un projet IA</h3><p>Partage d'un modèle mental prenant en compte la complexité.</p></div>
-    <div class="card"><div class="kicker">KPMG</div><h3>L’audit après l'IA - vue dans 10 ans</h3><p>Automatisation, assurance, responsabilité.</p></div>
+    <div class="card"><div class="kicker">Parquest</div><h3>Comment l’IA disrupte les industries</h3><p>L'IA, bâtisseuse et fossoyeuse d'empires.</p></div>
+    <div class="card"><div class="kicker">Project Management Institute</div><h3>Comment innover quand on est un Grand Groupe</h3><p>Philosophie, gouvernance et cadence.</p></div>
+    <div class="card"><div class="kicker">Caisse des écoles</div><h3>L'impact de l'IA pour le service public</h3><p>Comment utiliser la technologie pour améliorer la prise en charge.</p></div>
+    <div class="card"><div class="kicker">Rencontres du Developpement Durable</div><h3>IA et société : quels avenirs sont possibles ?</h3><p>Les apports et les risques de la technologies, et la respnsabilité qui nous incombe.</p></div>
+    <div class="card"><div class="kicker">SBM Offshore</div><h3>Inventer le compétiteur IA qui remplacera une entreprise</h3><p>Principes de disruption et stratégie offensive.</p></div>
+    <div class="card"><div class="kicker">AI Camp</div><h3>Comment estimer un projet IA</h3><p>Découvrir mon modèle mental pour anticiper les coûts d'un projet.</p></div>
+    <div class="card"><div class="kicker">KPMG</div><h3>Après l'IA - Le métier d'audit dans 10 ans</h3><p>Comment nosu transformons aujourd'hui les métiers de l'audit et de la certification.</p></div>
     <div class="card"><div class="kicker">Numeum × Rothschild &amp; Co</div><h3>L’IA pour les cabinets de conseil</h3><p>Modèles économiques et delivery.</p></div>
-    <div class="card"><div class="kicker">Parquest</div><h3>Transformer des industries par l’IA</h3><p>Playbooks d’exécution et fonctionnement des disruptions.</p></div>
-    <div class="card"><div class="kicker">investir+</div><h3>Scaler une startup à impact</h3><p>Comment faire ?</p></div>
-    <div class="card"><div class="kicker">Caisse des écoles</div><h3>IA pour le service public</h3><p>Qualité et prise en charge.</p></div>
-    <div class="card"><div class="kicker">Project Management Institute</div><h3>Innover en grand groupe</h3><p>Gouvernance et cadence.</p></div>
+    <div class="card"><div class="kicker">investir+</div><h3>Scaler une startup à impact grâce à l'IA</h3><p>Comprendre l'IA et s'en servir pour détroner les leaders d'un marché.</p></div>
     <div class="card"><div class="kicker">TotalEnergies</div><h3>Builder un “AWS de l’IT”</h3><p>Plateformes internes à l'heure de l'IA.</p></div>
     <div class="card"><div class="kicker">Bremens Avocats</div><h3>Avocat &amp; IA</h3><p>Productivité &amp; risque.</p></div>
-    <div class="card"><div class="kicker">SBM Offshore</div><h3>Compétiteur AI-first</h3><p>Vision à 3 ans.</p></div>
     <div class="card"><div class="kicker">Rakuten</div><h3>SalesOps IA</h3><p>Les marketplaces à l'heure de l'IA</p></div>
 
   </div>
