--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
   .writing-list li{margin:8px 0;}
   .date{display:inline-block;width:72px;color:var(--muted);font-variant-numeric:tabular-nums;}
   @media (max-width:560px){ :root{--rail:78px;} .entry::before{top:26px;} .date{width:auto;display:block;} }
+
+   /* Autres (liste façon karpathy) */
+  .writing-list{margin-top:6px;}
+  .writing-list li{margin:8px 0;}
+  .date{display:inline-block;width:72px;color:var(--muted);font-variant-numeric:tabular-nums;}
+  @media (max-width:560px){ :root{--rail:78px;} .entry::before{top:26px;} .date{width:auto;display:block;} }
 </style>
 </head>
 <body>
@@ -201,6 +207,16 @@
     <li><span class="date">2024</span><a href="https://www.kayro.ai/blog/deployer-une-application-ia-sappuyant-sur-les-llm-optimiser-le-triangle-des-performances-critiques" rel="noopener">Déployer une app IA sur LLM : optimiser le triangle des perfs critiques</a></li>
     <li><span class="date">2024</span><a href="https://www.kayro.ai/blog/debusquer-les-meilleurs-cas-dusage-de-lintelligence-artificielle-ou-reussir-ses-entretiens-utilisateurs" rel="noopener">Débusquer les meilleurs cas d’usage IA : réussir ses entretiens utilisateurs</a></li>
   </ul>
+
+</div>
+
+  <!-- Autres -->
+  <h2>autres</h2>
+  <ul class="writing-list">
+    <li> J'ai lancé un <a https://medium.com/@victor_72934" rel="noopener">blog</a> personnel pour discuter de sujets sociétaux. </li>
+
+</li>
+    
 
 </div>
 </body>
