--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <li><span class="date">2024</span><a href="https://www.kayro.ai/blog/comment-lintelligence-artificielle-transforme-le-secteur-du-conseil-en-2024" rel="noopener">Comment l’IA transforme le secteur du conseil en 2024</a></li>
     <li><span class="date">2024</span><a href="https://www.kayro.ai/blog/deployer-une-application-ia-sappuyant-sur-les-llm-optimiser-le-triangle-des-performances-critiques" rel="noopener">Déployer une app IA sur LLM : optimiser le triangle des perfs critiques</a></li>
     <li><span class="date">2024</span><a href="https://www.kayro.ai/blog/debusquer-les-meilleurs-cas-dusage-de-lintelligence-artificielle-ou-reussir-ses-entretiens-utilisateurs" rel="noopener">Débusquer les meilleurs cas d’usage IA : réussir ses entretiens utilisateurs</a></li>
-    <li> J'ai lancé un <a https://medium.com/@victor_72934" rel="noopener">blog</a> personnel pour discuter de sujets sociétaux. </li>
+    <li> J'ai lancé un <a href="https://medium.com/@victor_72934" rel="noopener">blog personnel</a> pour traiter d'autres sujets que l'IA. </li>
 
   </ul>
 
