--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
   <!-- Écriture -->
   <h2>écriture</h2>
   <ul class="writing-list">
+    <li><span class="date">2025</span><a href="https://www.kayro.ai/blog/illusion-du-cerveau-llm" rel="noopener">L’illusion du cerveau : pourquoi le LLM n’est qu’un organe dans une machine plus vaste</a></li>
     <li><span class="date">2025</span><a href="https://www.kayro.ai/blog/pricing-outils-ia-pourquoi-le-token-mark-up-pourrait-simposer" rel="noopener">Pricing des outils IA : pourquoi le token mark-up pourrait s’imposer</a></li>
     <li><span class="date">2025</span><a href="https://www.kayro.ai/blog/ce-quon-oublie-encore-dans-les-comites-dinvestissement-ia" rel="noopener">Ce qu’on oublie encore dans les comités d’investissement IA</a></li>
     <li><span class="date">2025</span><a href="https://www.kayro.ai/blog/80-des-agents-ia-sont-de-simples-automatisations" rel="noopener">80 % des agents IA sont de simples automatisations</a></li>
