--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         </ul>
         <!-- 2–3 images de talks (remplace les fichiers) -->
         <div class="thumb-grid">
-          <img class="thumb" src="https://media.licdn.com/dms/image/v2/D4D22AQFXDUWxOfezjA/feedshare-shrink_2048_1536/B4DZgwx_rwGgAo-/0/1753165072782?e=1762387200&v=beta&t=IbukpkL_Zak73kzXKRJYF-7yZBdKI9WWoRniBjBQmCQ" alt="Talk KPMG">
-          <img class="thumb" src="https://media.licdn.com/dms/image/v2/D4E22AQHCqYzwqQHUhg/feedshare-shrink_2048_1536/B4EZnsyobJHEA0-/0/1760614321347?e=1762387200&v=beta&t=QA5UQBE30Iv988R1GTu1t_P9Dv2h7PA35KhzIz-yg_I">
-          <img class="thumb" src="https://media.licdn.com/dms/image/v2/D4E22AQHjYv0sTiIWKg/feedshare-shrink_2048_1536/B4EZTRIChBGgAw-/0/1738675336786?e=1762387200&v=beta&t=mpIAHyWU5swMb4IRxV3hx4FTQrenX8ZgEh9rr2YR1zE" alt="Talk RADD">
+          <img class="thumb" src="./assets/img/conf kpmg.jpeg" alt="Talk KPMG">
+          <img class="thumb" src="./assets/img/conf santé.pdf">
+          <img class="thumb" src="./assets/img/conf rdd.jpeg">
         </div>
       </div>
     </div>
