--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
     </div>
     <!-- Place ton fichier : images/portrait.jpg -->
-    <img class="portrait" src="https://media.licdn.com/dms/image/v2/D4E03AQEd1hsyfuFJbA/profile-displayphoto-crop_800_800/B4EZjxOSPOGwAQ-/0/1756393711506?e=1759968000&v=beta&t=n7y72sVt-6OMIwNRSHCbaxvdNz1fn2I2ZofL6ujQ0Yc" alt="Victor Galli">
+    <img class="portrait" src="./assets/img/Pasted Graphic 3.pdf" alt="Victor Galli">
   </div>
 
   <hr>
