--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
     </div>
     <!-- Place ton fichier : images/portrait.jpg -->
-    <img class="portrait" src="./assets/img/Pasted Graphic 3.pdf" alt="Victor Galli">
+    <img class="portrait" src="./assets/img/Capture d’écran 2026-01-05 à 18.41.37.png" alt="Victor Galli">
   </div>
 
   <hr>
@@ -105,7 +105,7 @@
         <!-- 2–3 images de talks (remplace les fichiers) -->
         <div class="thumb-grid">
           <img class="thumb" src="./assets/img/conf kpmg.jpeg" alt="Talk KPMG">
-          <img class="thumb" src="./assets/img/conf santé.pdf">
+          <img class="thumb" src="./assets/img/Capture d’écran 2026-01-05 à 18.40.30.png">
           <img class="thumb" src="./assets/img/conf rdd.jpeg">
         </div>
       </div>
