--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="what">
         <img class="logo" src="https://cdn.prod.website-files.com/6798e14b489367f9260ee272/67a47aa92eed132d30642c80_opengraph.png" alt="Kayro.ai"> </li>
         Avec <a href="https://thomas-solignac.com/" rel="noopener">Thomas Solignac</a>, j'ai lancé <a href="https://www.kayro.ai/" rel="noopener">kayro.ai</a>, une nouvelle entreprise de consulting IA. Rejoints par des entrepreneurs IA et tech, on accompagne les fonds de Private Equity et les dirigeants pour transformer les industries traditionnelles, concevoir et déployer des systèmes d'IA appliquée. Cela inclut de l'analyse stratégique, de la conception produit, de la préparation et annotation de données in-house, de l'entrainement de modèles et du chainage de LLMs, la science de que tout cela fonctionne et du déploiement en production, avec intégration aux SI industriels. </br>
-        <br> En même temps, je donne des conférences auprès de directions générales, comités d’investissement et équipes produit/data. </li>
+        <br> En même temps, je donne des conférences auprès de directions générales, comités d’investissement et équipes produit/data (Ardian, KPMG, Rotschild & Co, Total, ANFH...). </li>
         <br> Et je partage mes apprentissages en écrivant des articles et des posts sur <a href="https://www.linkedin.com/in/victor-galli/" rel="noopener">LinkedIn</a>. </li>
         <br> 68 projets IA en 2 ans (<a href="https://www.kayro.ai/references" rel="noopener">références</a>). </br>
         <ul class="min small">
