--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
   <div class="header">
     <div>
       <h1>Victor Galli</h1>
-      <div class="lead">J’aime construire des systèmes IA pour réinventer les industries traditionnelles.
-      L’IA n’est pas une technologie.
-C’est un changement de modèle économique.</div>
+      <div class="lead">J’aime construire des systèmes IA pour réinventer les industries traditionnelles. Les modèles savent déjà faire correctement la majorité des tâches intellectuelles simples, j'aide les d’entreprises capables à repenser leur service de bout en bout, plaçant l’IA au cœur de la production du résultat final.
+    </div>
       <div class="small">
         <a href="https://kayro.ai" rel="noopener">Kayro.ai</a> · 
         <a href="mailto:victor@kayro.ai">victor@kayro.ai</a> · 
