--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <br> Et je partage mes apprentissages en écrivant des articles et des posts sur <a href="https://www.linkedin.com/in/victor-galli/" rel="noopener">LinkedIn</a>. </li>
         <br> 68 projets IA en 2 ans (<a href="https://www.kayro.ai/references" rel="noopener">références</a>). </br>
         <ul class="min small">
-          <li>Membre <em>Hub FranceIA</em>. Expert AI/Data pour <a href="https://www.bpifrance.fr/" rel="noopener">bpifrance</a> <em>(IA Booster – France 2030)</em> </li>
+          <li>Membre <em>Hub FranceIA</em>. Expert AI/Data pour <a href="https://www.bpifrance.fr/" rel="noopener">bpifrance</a> <em>(IA Booster – France 2030). Operating partner pour Private Equity et VC.</em> </li>
         </ul>
         <!-- 2–3 images de talks (remplace les fichiers) -->
         <div class="thumb-grid">
