--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="header">
     <div>
       <h1>Victor Galli</h1>
-      <div class="lead">J’aime construire des systèmes IA pour réinventer les industries traditionnelles. Les modèles savent déjà faire correctement la majorité des tâches intellectuelles simples, j'aide les d’entreprises capables à repenser leur service de bout en bout, plaçant l’IA au cœur de la production du résultat final.
+      <div class="lead">J’aime construire des systèmes IA pour réinventer les industries traditionnelles. Nous savons déjà faire correctement la majorité des tâches intellectuelles, il faut maintenant repenser les services des entreprises de bout en bout.
     </div>
       <div class="small">
         <a href="https://kayro.ai" rel="noopener">Kayro.ai</a> · 
