--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="header">
     <div>
       <h1>Victor Galli</h1>
-      <div class="lead">J’aime construire des systèmes IA pour réinventer les industries traditionnelles. Nous savons déjà faire correctement la majorité des tâches intellectuelles, il faut maintenant repenser les services des entreprises de bout en bout.
+      <div class="lead">J’aime construire des systèmes IA pour réinventer les industries traditionnelles. 
     </div>
       <div class="small">
         <a href="https://kayro.ai" rel="noopener">Kayro.ai</a> · 
