--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         </ul>
         <!-- 2–3 images de talks (remplace les fichiers) -->
         <div class="thumb-grid">
-          <img class="thumb" src="./assets/img/conf kpmg.jpeg" alt="Talk KPMG">
           <img class="thumb" src="./assets/img/Capture d’écran 2026-01-05 à 18.40.30.png">
+          <img class="thumb" src="./assets/img/Capture d’écran 2026-01-17 à 14.07.51.png" alt="TV"> 
           <img class="thumb" src="./assets/img/conf rdd.jpeg">
         </div>
       </div>
