Fix clients logos grid and add site favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Victor Galli</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="IA, conseil, conférences.">
+<link rel="icon" type="image/svg+xml" href="./assets/img/favicon.svg">
 <style>
   :root{
     --fg:#111; --muted:#555; --bg:#fff; --rule:#eaeaea; --max:960px;
