Ajuste la phrase d'ouverture pour renforcer le positionnement builder

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section class="hero">
     <div>
       <h1>Victor Galli</h1>
-      <p class="lead">J’aide dirigeants, investisseurs et équipes opérationnelles à transformer l’IA en avantage concurrentiel réel: stratégie, mise en production et exécution terrain.</p>
+      <p class="lead">J’aime concevoir des systèmes d’intelligence artificielle appliquée. J’aide dirigeants, investisseurs et équipes opérationnelles à transformer l’IA en avantage concurrentiel réel: stratégie, mise en production et exécution terrain.</p>
       <p class="meta">
         Cofondateur de <a href="https://www.kayro.ai/" rel="noopener">Kayro.ai</a> · Fondateur de <a href="https://quint-psy-site.vercel.app/" rel="noopener">QUINT psy</a> ·
         <a href="mailto:victor@kayro.ai">victor@kayro.ai</a> ·
