Add Book me section with formats, target audience and disruption angle

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
   hr{border:0;border-top:1px solid var(--rule);margin:18px 0;}
   .lead{color:var(--muted);margin:6px 0 14px 0;}
   .small{font-size:14px;color:var(--muted);}
+  .book{border:1px solid var(--rule);border-radius:14px;padding:14px;background:#fff;}
+  .book h2{margin:0 0 8px 0;text-transform:none;}
+  .book p{margin:0 0 10px 0;}
+  .book-meta{display:flex;flex-wrap:wrap;gap:8px;margin:8px 0 10px 0;}
+  .pill{display:inline-block;border:1px solid var(--rule);border-radius:999px;padding:4px 10px;font-size:13px;}
+  .book-btn{display:inline-block;background:#111;color:#fff;text-decoration:none;border-radius:10px;padding:10px 14px;font-weight:600;}
+  .book-btn:hover{opacity:.9;text-decoration:none;}
 
   /* Header + portrait */
   .header{display:grid;grid-template-columns:1fr auto;gap:16px;align-items:center;}
@@ -88,6 +95,18 @@
   </div>
 
   <hr>
+  
+  <div class="book">
+    <h2>Book me — repensez votre entreprise avant que votre marché ne soit cannibalisé</h2>
+    <p>J’interviens auprès de directions générales, fonds d’investissement et top management pour comprendre les impacts de l’IA sur la chaîne de valeur, les risques de disruption, et les décisions à prendre maintenant.</p>
+    <div class="book-meta">
+      <span class="pill">Formats: 20 minutes</span>
+      <span class="pill">40 minutes</span>
+      <span class="pill">50 ou 90 minutes</span>
+      <span class="pill">Demi-journée / Journée complète</span>
+    </div>
+    <a class="book-btn" href="mailto:victor@kayro.ai?subject=Book%20me%20-%20conf%C3%A9rence">Book me</a>
+  </div>
 
   <!-- Frise chronologique (compacte, centrée sur Kayro) -->
   <div class="timeline">
