Add conference signature section aligned with builder/executive positioning

--- a/index.html
+++ b/index.html
@@ -200,6 +200,17 @@
 
   </div>
 
+  <!-- Signature conférences -->
+  <h2>signature de mes conférences</h2>
+  <div class="cards">
+    <div class="card"><div class="kicker">CAPTER</div><h3>Pas de blabla, que du concret</h3><p>Je parle cash, je vais au point, et je garde l'attention en liant chaque idée à une décision business réelle.</p></div>
+    <div class="card"><div class="kicker">CADRER</div><h3>Board, stratégie et financement</h3><p>J'apporte une lecture claire des enjeux de disruption, de cannibalisation de marché et de création de valeur à horizon 2-5 ans.</p></div>
+    <div class="card"><div class="kicker">CHALLENGER</div><h3>Dirigeants, fonds, top management</h3><p>J'interviens comme un patron de boîte: on challenge les hypothèses, les offres, le go-to-market et les priorités d'exécution.</p></div>
+    <div class="card"><div class="kicker">ACTUALISER</div><h3>Toujours à jour sur ce qui marche</h3><p>Je construis des systèmes tous les jours. Les retours terrain nourrissent mes interventions semaine après semaine.</p></div>
+    <div class="card"><div class="kicker">ADAPTER</div><h3>Format court ou immersif</h3><p>20 min, 40 min, 50/90 min, demi-journée ou journée complète: le format s'ajuste à votre niveau de maturité et à vos objectifs.</p></div>
+    <div class="card"><div class="kicker">FAIRE AGIR</div><h3>Un pont rare entre business et tech</h3><p>Je traduis la technologie en décisions actionnables pour les équipes, sans simplisme, avec un plan de passage à l'action.</p></div>
+  </div>
+
   <!-- Clients -->
   <h2>clients</h2>
   <div class="small"><a href="./clients.html">voir tous les clients</a></div>
