Refine conference signature copy to premium and clear tone

--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
   <!-- Signature conférences -->
   <h2>signature de mes conférences</h2>
   <div class="cards">
-    <div class="card"><div class="kicker">CAPTER</div><h3>Pas de blabla, que du concret</h3><p>Je parle cash, je vais au point, et je garde l'attention en liant chaque idée à une décision business réelle.</p></div>
-    <div class="card"><div class="kicker">CADRER</div><h3>Board, stratégie et financement</h3><p>J'apporte une lecture claire des enjeux de disruption, de cannibalisation de marché et de création de valeur à horizon 2-5 ans.</p></div>
-    <div class="card"><div class="kicker">CHALLENGER</div><h3>Dirigeants, fonds, top management</h3><p>J'interviens comme un patron de boîte: on challenge les hypothèses, les offres, le go-to-market et les priorités d'exécution.</p></div>
-    <div class="card"><div class="kicker">ACTUALISER</div><h3>Toujours à jour sur ce qui marche</h3><p>Je construis des systèmes tous les jours. Les retours terrain nourrissent mes interventions semaine après semaine.</p></div>
-    <div class="card"><div class="kicker">ADAPTER</div><h3>Format court ou immersif</h3><p>20 min, 40 min, 50/90 min, demi-journée ou journée complète: le format s'ajuste à votre niveau de maturité et à vos objectifs.</p></div>
-    <div class="card"><div class="kicker">FAIRE AGIR</div><h3>Un pont rare entre business et tech</h3><p>Je traduis la technologie en décisions actionnables pour les équipes, sans simplisme, avec un plan de passage à l'action.</p></div>
+    <div class="card"><div class="kicker">CAPTER</div><h3>Créer une attention totale</h3><p>Chaque intervention est construite pour maintenir l’attention du début à la fin, avec une progression claire et un rythme maîtrisé.</p></div>
+    <div class="card"><div class="kicker">CADRER</div><h3>Donner une lecture stratégique</h3><p>Je rends lisibles les enjeux de disruption, de cannibalisation et de création de valeur pour éclairer les décisions du board.</p></div>
+    <div class="card"><div class="kicker">CHALLENGER</div><h3>Élever le niveau des décisions</h3><p>Dirigeants, fonds et top management repartent avec des arbitrages plus exigeants sur l’offre, la priorisation et l’exécution.</p></div>
+    <div class="card"><div class="kicker">ACTUALISER</div><h3>Apporter une vision ancrée dans le réel</h3><p>Mes contenus évoluent en continu, nourris par les systèmes que je construis et déploie chaque semaine sur le terrain.</p></div>
+    <div class="card"><div class="kicker">ADAPTER</div><h3>Concevoir le bon format</h3><p>20 min, 40 min, 50/90 min, demi-journée ou journée complète: le format est calibré selon vos enjeux et votre niveau de maturité.</p></div>
+    <div class="card"><div class="kicker">FAIRE AGIR</div><h3>Transformer les idées en exécution</h3><p>Je fais le pont entre business, management et technologie pour convertir la vision en plan d’action concret et immédiatement activable.</p></div>
   </div>
 
   <!-- Clients -->
