Add live demo capability to conference signature

--- a/index.html
+++ b/index.html
@@ -243,6 +243,14 @@
     </div>
     <div class="signature-item">
       <div class="signature-num">05</div>
+      <div class="signature-verb">Démontrer</div>
+      <div class="signature-body">
+        <h3>Montrer la technologie en direct</h3>
+        <p>Je fais des démonstrations live pour ouvrir le capot, faire pratiquer les équipes et leur faire fabriquer des cas concrets autour de l’IA générative, du no-code, du vibe coding et des agents.</p>
+      </div>
+    </div>
+    <div class="signature-item">
+      <div class="signature-num">06</div>
       <div class="signature-verb">Adapter</div>
       <div class="signature-body">
         <h3>Concevoir le bon format</h3>
@@ -250,7 +258,7 @@
       </div>
     </div>
     <div class="signature-item">
-      <div class="signature-num">06</div>
+      <div class="signature-num">07</div>
       <div class="signature-verb">Faire agir</div>
       <div class="signature-body">
         <h3>Transformer les idées en exécution</h3>
