--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
   </div>
 
   <h2>bio média</h2>
-  <p>Victor Galli est entrepreneur en intelligence artificielle, cofondateur de Kayro.ai et fondateur de QUINT psy. Depuis plus de dix ans, il conçoit et déploie des systèmes technologiques pour des groupes du CAC 40, des services publics et des entreprises en forte transformation.</p>
-  <p>Son positionnement est rare: il relie la stratégie d’entreprise, les enjeux d’investissement et la réalité de l’exécution technique. Il intervient régulièrement auprès de dirigeants, boards et fonds de private equity pour éclairer les opportunités, les limites et les impacts humains de l’IA.</p>
-  <p>Avec QUINT psy, il explore l’intersection entre psychologie, IA conversationnelle et transformation comportementale, avec une ambition claire: produire une utilité psychologique réelle à grande échelle, en respectant la juste distance entre soin humain et interaction machine.</p>
+  <p>Je suis entrepreneur en intelligence artificielle, cofondateur de Kayro.ai et fondateur de QUINT psy. Depuis plus de dix ans, je conçois et déploie des systèmes technologiques pour des groupes du CAC 40, des services publics et des entreprises en forte transformation.</p>
+  <p>Mon positionnement est rare: je relie la stratégie d’entreprise, les enjeux d’investissement et la réalité de l’exécution technique. J’interviens régulièrement auprès de dirigeants, boards et fonds de private equity pour éclairer les opportunités, les limites et les impacts humains de l’IA.</p>
+  <p>Avec QUINT psy, j’explore l’intersection entre psychologie, IA conversationnelle et transformation comportementale, avec une ambition claire: produire une utilité psychologique réelle à grande échelle, en respectant la juste distance entre soin humain et interaction machine.</p>
 
   <!-- Frise chronologique (compacte, centrée sur Kayro) -->
   <div class="timeline">
