Affine la bio QUINT: angle psycho/IA et distance au soin

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <h2>bio média</h2>
   <p>Je suis entrepreneur en intelligence artificielle, cofondateur de Kayro.ai et fondateur de QUINT psy. Depuis plus de dix ans, je conçois et déploie des systèmes technologiques pour des groupes du CAC 40, des services publics et des entreprises en forte transformation.</p>
   <p>Mon positionnement est rare: je relie la stratégie d’entreprise, les enjeux d’investissement et la réalité de l’exécution technique. J’interviens régulièrement auprès de dirigeants, boards et fonds de private equity pour éclairer les opportunités, les limites et les impacts humains de l’IA.</p>
-  <p>Je développe aussi QUINT psy, un labo produit où l’on construit et teste des systèmes conversationnels orientés progression, régulation et transformation comportementale, avec une exigence forte sur l’impact réel.</p>
+  <p>Je développe aussi QUINT psy, un laboratoire exploratoire où nous testons comment l’IA conversationnelle peut mobiliser des leviers psychologiques (réflexion, régulation, passage à l’action) sans brouiller la frontière avec le soin humain.</p>
 
   <!-- Frise chronologique (compacte, centrée sur Kayro) -->
   <div class="timeline">
