Raccourcit la bio média en version 3 lignes

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
   </div>
 
   <h2>bio média</h2>
-  <p>Je suis entrepreneur en intelligence artificielle, cofondateur de Kayro.ai et fondateur de QUINT psy. Depuis plus de dix ans, je conçois et déploie des systèmes technologiques pour des groupes du CAC 40, des services publics et des entreprises en forte transformation.</p>
-  <p>Mon positionnement est rare: je relie la stratégie d’entreprise, les enjeux d’investissement et la réalité de l’exécution technique. J’interviens régulièrement auprès de dirigeants, boards et fonds de private equity pour éclairer les opportunités, les limites et les impacts humains de l’IA.</p>
-  <p>Je développe aussi QUINT psy, un laboratoire expérimental où nous menons des travaux exploratoires sur les interfaces entre psychologie et IA conversationnelle: protocoles d’interaction, mécanismes de régulation et conditions d’usage, avec une attention particulière à la frontière entre accompagnement technologique et soin humain.</p>
+  <p>Je suis entrepreneur en intelligence artificielle, cofondateur de Kayro.ai et fondateur de QUINT psy.</p>
+  <p>Depuis plus de dix ans, je conçois et déploie des systèmes d’IA appliquée pour des groupes du CAC 40, des services publics et des entreprises en forte transformation.</p>
+  <p>Je travaille au contact direct des dirigeants, boards et fonds pour relier stratégie, exécution technique et enjeux humains.</p>
 
   <!-- Frise chronologique (compacte, centrée sur Kayro) -->
   <div class="timeline">
