--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
       <div class="when">2025 – aujourd’hui</div>
       <div class="what">
         <img class="logo" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='1' y2='1'%3E%3Cstop offset='0%25' stop-color='%23111827'/%3E%3Cstop offset='1' stop-color='%232a3f66'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='96' height='96' rx='20' fill='url(%23g)'/%3E%3Ccircle cx='45' cy='45' r='22' fill='none' stroke='%23ffffff' stroke-width='8'/%3E%3Cpath d='M58 58 L74 74' stroke='%23ffffff' stroke-width='8' stroke-linecap='round'/%3E%3C/svg%3E" alt="Logo QUINT psy">
-        Chez <a href="https://quint-psy-site.vercel.app/" rel="noopener">QUINT psy</a>, j’explore l’intersection entre psychologie, IA conversationnelle et transformation comportementale. L’objectif: produire une utilité psychologique réelle à grande échelle, en gardant la bonne distance entre le soin humain et l’interaction machine.
-        <br>Nous concevons et testons des systèmes de "conversation comme thérapie": des compagnons IA pensés pour aider les utilisateurs à réfléchir, se réguler et progresser. Itération continue via prototypes terrain, boucles de tests utilisateurs et mesures d’impact pour identifier ce qui fonctionne vraiment.
+        Chez <a href="https://quint-psy-site.vercel.app/" rel="noopener">QUINT psy</a>, nous développons des systèmes d’IA conversationnelle avec modélisation psychologique en temps réel: détection des états de régulation, profilage longitudinal des utilisateurs et reconnaissance de patterns inter-sessions pour opérationnaliser des mécanismes clés du changement thérapeutique.
+        <br>Nous concevons et testons des frameworks adaptatifs où les agents conversationnels ajustent leurs approches selon l’évolution du profil utilisateur, mesurent les effets via une synthèse structurée des sessions, et imposent des frontières explicites entre support IA et soin humain.
+        <br>Objectif: délivrer une utilité psychologique mesurable à grande échelle, via recherche appliquée, prototypage terrain et mesure continue des résultats.
       </div>
     </div>
 
