--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
       <div class="when">2025 – aujourd’hui</div>
       <div class="what">
         <img class="logo" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 96'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='1' y2='1'%3E%3Cstop offset='0%25' stop-color='%23111827'/%3E%3Cstop offset='1' stop-color='%232a3f66'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='96' height='96' rx='20' fill='url(%23g)'/%3E%3Ccircle cx='45' cy='45' r='22' fill='none' stroke='%23ffffff' stroke-width='8'/%3E%3Cpath d='M58 58 L74 74' stroke='%23ffffff' stroke-width='8' stroke-linecap='round'/%3E%3C/svg%3E" alt="Logo QUINT psy">
-        Chez <a href="https://quint-psy-site.vercel.app/" rel="noopener">QUINT psy</a>, je bosse sur un sujet qui me fascine: comment une conversation IA peut créer un vrai mouvement psychologique.
-        <br>On construit des agents qui détectent les états de régulation en temps réel (stress, evitement, clarte) et adaptent leur posture.
-        <br>On suit l’evolution sur la duree avec un profil longitudinal, pas juste une session isolee.
-        <br>On repere les patterns inter-sessions pour choisir la bonne intervention au bon moment.
-        <br>Chaque prototype est teste en conditions reelles, synthetise session par session, puis ameliore avec des metriques d’impact.
-        <br>Pourquoi j’y crois autant? Parce que l’acces au soin est trop lent, trop cher, ou trop inegal pour beaucoup de monde.
-        <br>L’idee n’est pas de remplacer un therapeute, mais d’offrir un appui utile entre deux seances.
-        <br>Si on le fait bien, on peut rendre l’aide psy plus accessible, plus continue, et vraiment actionnable a grande echelle.
+        Chez <a href="https://quint-psy-site.vercel.app/" rel="noopener">QUINT psy</a>, on fonctionne comme un lab de recherche appliquée sur l’IA conversationnelle clinique-adjacente.
+        <br>Notre axe central: Real-Time Psychological Modeling, avec trois chantiers techniques majeurs.
+        <br>1) Regulation State Detection, 2) Longitudinal User Profiling, 3) Cross-Session Pattern Recognition.
+        <br>Le but est d’opérationnaliser les Core Mechanisms of Therapeutic Change dans des systèmes testables, pas dans des slides.
+        <br>Architecture de travail: estimation d’état psychologique en temps réel → couche de mémoire/profil longitudinal → moteur de sélection d’intervention → garde-fous de sécurité explicites.
+        <br>Côté recherche, on avance par hypothèses falsifiables, protocoles d’expérimentation, et mesure d’effets session par session puis sur trajectoire.
+        <br>Le why est simple: rendre un support psychologique sérieux plus accessible quand l’accès au soin est trop rare, trop lent ou trop coûteux.
+        <br>On ne remplace pas un thérapeute; on construit un complément fiable entre les séances, avec des limites claires et auditables.
       </div>
     </div>
 
